--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 06:24:00 PM</p>
+    <p class="lastupdate">09/13/2020 06:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">76.5&#176;F</td>
+        <td class="data">76.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">76.5&#176;F</td>
+        <td class="data">76.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">76.5&#176;F</td>
+        <td class="data">76.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.0&#176;F</td>
+        <td class="data">49.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">39%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.852 inHg (0.012)</td>
+        <td class="data">29.854 inHg (0.014)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph S (180&#176;)</td>
+        <td class="data">5 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="06:04:28 PM">
-            49.6</span><br/>
+          <span title="06:24:48 PM">
+            49.7</span><br/>
           <span title="02:16:06 PM">
             36.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:04:28 PM (Sunday)">
-            49.6</span><br/>
+          <span title="06:24:48 PM (Sunday)">
+            49.7</span><br/>
           <span title="02:16:06 PM (Sunday)">
             36.3</span>
         </td>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          242
+          241
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:22:02 PM">
-            80.7</span><br/>
+          <span title="06:26:02 PM">
+            80.8</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:22:02 PM (Sunday)">
-            80.7</span><br/>
+          <span title="06:26:02 PM (Sunday)">
+            80.8</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">90%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 3 hours, 37 minutes</td>
+      <td class="data">12 days, 3 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 3 hours, 37 minutes</td>
+      <td class="data">12 days, 3 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
