--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 06:29:00 PM</p>
+    <p class="lastupdate">09/13/2020 06:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">76.0&#176;F</td>
+        <td class="data">75.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">76.0&#176;F</td>
+        <td class="data">75.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">76.0&#176;F</td>
+        <td class="data">75.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.2&#176;F</td>
+        <td class="data">49.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">39%</td>
+        <td class="data">40%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.854 inHg (0.014)</td>
+        <td class="data">29.855 inHg (0.016)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph SSE (158&#176;)</td>
+        <td class="data">6 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -235,13 +235,13 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="06:24:48 PM">
+          <span title="06:30:46 PM">
             49.7</span><br/>
           <span title="02:16:06 PM">
             36.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:24:48 PM (Sunday)">
+          <span title="06:30:46 PM (Sunday)">
             49.7</span><br/>
           <span title="02:16:06 PM (Sunday)">
             36.3</span>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          241
+          240
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 3 hours, 42 minutes</td>
+      <td class="data">12 days, 3 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 3 hours, 42 minutes</td>
+      <td class="data">12 days, 3 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
