--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 09:04:00 PM</p>
+    <p class="lastupdate">09/13/2020 09:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.8&#176;F</td>
+        <td class="data">66.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.8&#176;F</td>
+        <td class="data">66.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.8&#176;F</td>
+        <td class="data">66.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.6&#176;F</td>
+        <td class="data">46.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">50%</td>
+        <td class="data">48%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.906 inHg (0.049)</td>
+        <td class="data">29.909 inHg (0.051)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph W (270&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 6 hours, 17 minutes</td>
+      <td class="data">12 days, 6 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 6 hours, 17 minutes</td>
+      <td class="data">12 days, 6 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
