--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 09:29:00 PM</p>
+    <p class="lastupdate">09/13/2020 09:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.0&#176;F</td>
+        <td class="data">64.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.0&#176;F</td>
+        <td class="data">64.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.0&#176;F</td>
+        <td class="data">64.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -70,7 +70,7 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.915 inHg (0.061)</td>
+        <td class="data">29.914 inHg (0.059)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">37%</td>
       </tr>
     </tbody>
   </table>
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="01:02:00 AM">
-            36</span><br/>
+          <span title="09:30:02 PM">
+            37</span><br/>
           <span title="04:12:02 PM">
             31</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:02:00 AM (Sunday)">
-            36</span><br/>
+          <span title="09:30:02 PM (Sunday)">
+            37</span><br/>
           <span title="04:12:02 PM (Sunday)">
             31</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 6 hours, 42 minutes</td>
+      <td class="data">12 days, 6 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 6 hours, 42 minutes</td>
+      <td class="data">12 days, 6 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
