--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 09:29:00 PM</p>
+    <p class="lastupdate">09/13/2020 09:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -396,14 +396,14 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            36<br/>
-            <span class="timestamp">01:02:00 AM</span><br/>
+            37<br/>
+            <span class="timestamp">09:30:02 PM</span><br/>
             31<br/>
             <span class="timestamp">04:12:02 PM</span>
           </td>
           <td class="data new_row">
-            36<br/>
-            <span class="timestamp">01:02:00 AM (Sunday)</span><br/>
+            37<br/>
+            <span class="timestamp">09:30:02 PM (Sunday)</span><br/>
             31<br/>
             <span class="timestamp">04:12:02 PM (Sunday)</span>
           </td>
