--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 09:59:00 PM</p>
+    <p class="lastupdate">09/13/2020 10:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">63.7&#176;F</td>
+        <td class="data">63.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">63.7&#176;F</td>
+        <td class="data">63.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">63.7&#176;F</td>
+        <td class="data">63.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.2&#176;F</td>
+        <td class="data">47.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">55%</td>
+        <td class="data">56%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.923 inHg (0.068)</td>
+        <td class="data">29.920 inHg (0.057)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph W (270&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Waning crescent<br/>
-            13%</td>
+            12%</td>
         </tr>
       </table>
     </div>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">90%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 7 hours, 12 minutes</td>
+      <td class="data">12 days, 7 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 7 hours, 12 minutes</td>
+      <td class="data">12 days, 7 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
