--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 10:04:00 PM</p>
+    <p class="lastupdate">09/13/2020 10:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.920 inHg (0.057)</td>
+        <td class="data">29.920 inHg (0.058)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph W (270&#176;)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 7 hours, 17 minutes</td>
+      <td class="data">12 days, 7 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 7 hours, 17 minutes</td>
+      <td class="data">12 days, 7 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
