--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 10:34:00 PM</p>
+    <p class="lastupdate">09/13/2020 10:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.6&#176;F</td>
+        <td class="data">62.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.6&#176;F</td>
+        <td class="data">62.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.6&#176;F</td>
+        <td class="data">62.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.7&#176;F</td>
+        <td class="data">47.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">56%</td>
+        <td class="data">57%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.926 inHg (0.064)</td>
+        <td class="data">29.930 inHg (0.066)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:49:01 AM">
-            29.930</span><br/>
+          <span title="10:35:02 PM">
+            29.931</span><br/>
           <span title="02:56:02 PM">
             29.833</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:49:01 AM (Sunday)">
-            29.930</span><br/>
+          <span title="10:35:02 PM (Sunday)">
+            29.931</span><br/>
           <span title="02:56:02 PM (Sunday)">
             29.833</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 7 hours, 47 minutes</td>
+      <td class="data">12 days, 7 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 7 hours, 47 minutes</td>
+      <td class="data">12 days, 7 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
