--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 10:34:00 PM</p>
+    <p class="lastupdate">09/13/2020 10:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -209,13 +209,13 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.930<br/>
-            <span class="timestamp">09:49:01 AM</span><br/>
+          <td class="data new_row">29.931<br/>
+            <span class="timestamp">10:35:02 PM</span><br/>
             29.833<br/>
             <span class="timestamp">02:56:02 PM</span>
           </td>
-          <td class="data new_row">29.930<br/>
-            <span class="timestamp">09:49:01 AM (Sunday)</span><br/>
+          <td class="data new_row">29.931<br/>
+            <span class="timestamp">10:35:02 PM (Sunday)</span><br/>
             29.833<br/>
             <span class="timestamp">02:56:02 PM (Sunday)</span>
           </td>
