--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 11:24:00 PM</p>
+    <p class="lastupdate">09/13/2020 11:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.4&#176;F</td>
+        <td class="data">60.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.4&#176;F</td>
+        <td class="data">60.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.4&#176;F</td>
+        <td class="data">60.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.0&#176;F</td>
+        <td class="data">46.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">59%</td>
+        <td class="data">60%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.940 inHg (0.059)</td>
+        <td class="data">29.942 inHg (0.056)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="11:15:03 PM">
-            29.941</span><br/>
+          <span title="11:28:03 PM">
+            29.942</span><br/>
           <span title="02:56:02 PM">
             29.833</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:15:03 PM (Sunday)">
-            29.941</span><br/>
+          <span title="11:28:03 PM (Sunday)">
+            29.942</span><br/>
           <span title="02:56:02 PM (Sunday)">
             29.833</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 8 hours, 37 minutes</td>
+      <td class="data">12 days, 8 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 8 hours, 37 minutes</td>
+      <td class="data">12 days, 8 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
